--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
     <description>Andes, Distributed message broker engine</description>
 
     <scm>
-        <connection>scm:https://github.com/wso2/andes.git</connection>
-        <developerConnection>scm:git:https://github.com/wso2/andes.git</developerConnection>
-        <url>https://github.com/wso2/andes.git</url>
+        <connection>scm:https://github.com/akalankapagoda/andes.git</connection>
+        <developerConnection>scm:git:https://github.com/akalankapagoda/andes.git</developerConnection>
+        <url>https://github.com/akalankapagoda/andes.git</url>
         <tag>HEAD</tag>
     </scm>
 
