--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>org.wso2.andes</groupId>
     <artifactId>andes-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.6.4</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>Andes</name>
     <description>Andes, Distributed message broker engine</description>
 
@@ -37,7 +37,7 @@
         <connection>scm:https://github.com/akalankapagoda/andes.git</connection>
         <developerConnection>scm:git:https://github.com/akalankapagoda/andes.git</developerConnection>
         <url>https://github.com/akalankapagoda/andes.git</url>
-        <tag>v2.6.4</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
